--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Нёрдс</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <div>
+      <a href="#">
+        <img src="https://via.placeholder.com/150x100" alt="Логотип Нёрдс">
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <a href="#">Корзина</a>
+    </div>
+    <main>
+      <div>
+        <div>
+          <h2>Долго, дорого,<br> скрупулезно.</h2>
+          <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
+          <a href="#">Узнать больше</a>
+        </div>
+        <div class="slider">
+          <img src="https://via.placeholder.com/150x100" alt="Картинка слайдера">
+        </div>
+      </div>
+  </header>
+  <section>
+    <h3>Возможности</h3>
+    <ul>
+      <li>
+        <img src="https://via.placeholder.com/150x100" alt="Картинка ноутбука">
+        <h3>веб-сайты</h3>
+        <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт</p>
+        <a href="catalog.html">Заказать</a>
+      </li>
+      <li>
+        <img src="https://via.placeholder.com/150x100" alt="Картинка телефонов">
+        <h3>приложения</h3>
+        <p>Покорите топ-10 приложений <br> в AppStore и Google Play</p>
+        <a href="catalog.html">Заказать</a>
+      </li>
+      <li>
+        <img src="https://via.placeholder.com/150x100" alt="Доска для презинтаций">
+        <h3>презинтация</h3>
+        <p>Вы даже не подозреваете, <br> насколько вы изумительны!</p>
+        <a href="catalog.html">Заказать</a>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h1>Мы — маленькая, но гордая <br> дизайн-студия из Краснодара.</h1>
+    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше креатива. Работаем не
+      покладая рук, как роботы.</p>
+    <h3>Выполняем заказы на разработку:</h3>
+    <ul>
+      <li>Веб-сайтов любой сложности</li>
+      <li>Мобильных приложений для iOS и Android</li>
+      <li>Слайдшоу и видео для корпоративных презентаций</li>
+    </ul>
+    <img src="https://via.placeholder.com/150x100" alt="Нёрдс с точками">
+    <p>с 2004 года любим точность во всем:</p>
+    <h3>146%</h3>
+    <p>Уровень <br> самоотдачи</p>
+    <h3>100%</h3>
+    <p>Соблюдение <br> сроков</p>
+    <h3>50%</h3>
+    <p>Минимальная <br> предоплата</p>
+    <img src="https://via.placeholder.com/150x100" alt="html academy">
+    <img src="https://via.placeholder.com/150x100" alt="Borodinski">
+    <img src="https://via.placeholder.com/150x100" alt="Pink">
+    <img src="https://via.placeholder.com/150x100" alt="Mishka">
+  </section>
+  </main>
+  <footer>
+    <section>
+      <div>
+        <h3>NЁRDS DESIGN STUDIO</h3>
+        <p>191186, Санкт-Петербург, <br> ул. Б. Конюшенная, д. 19/8</p>
+        <p>тел. +7 (812) 275-75-75</p>
+        <img src="https://via.placeholder.com/150x100" alt="Карта с отметкой">
+        <a href="#">напишите нам</a>
+      </div>
+    </section>
+    <h3>Давайте дружить, это выгодно!</h3>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+    <address>
+      <a href="https://vk.com/htmlacademy"></a>
+      <img src="https://via.placeholder.com/150x100" alt="Картинка Вк">
+      <a href="https://www.facebook.com/HTML-Academy-795303870667279/"></a>
+      <img src="https://via.placeholder.com/150x100" alt="Картинка Фб">
+      <a href="https://www.instagram.com/htmlacademy/?hl=ru"></a>
+      <img src="https://via.placeholder.com/150x100" alt="Картинка Инст">
+    </address>
+  </footer>
+</body>
+
 </html>
