--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог — Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="icon/32.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
@@ -11,7 +15,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100" alt="">
+                <img src="img/nerds-logo@2x.svg" width="159.87" height="65.02" alt="Логотип Нёрдс">
             </a>
             <ul>
                 <li><a href="#">Студия</a></li>
@@ -95,7 +99,7 @@
                 <a href="product.html">
                     <h3>sedona</h3>
                     <p>
-                        <img src="https://via.placeholder.com/150x100" alt="Картинка сайта Седона">
+                        <img src="img/Mask Group.png" width="358" height="578" alt="Картинка сайта Седона">
                     </p>
                 </a>
                 <p>
@@ -107,7 +111,7 @@
                 <a href="product.html">
                     <h3>pink</h3>
                     <p>
-                        <img src="https://via.placeholder.com/150x100" alt="Картинка сайта Пинк">
+                        <img src="img/Mask Group (1).png" width="358" height="578" alt="Картинка сайта Пинк">
                     </p>
                 </a>
                 <p>
@@ -119,7 +123,7 @@
                 <a href="product.html">
                     <h3>Borodinski</h3>
                     <p>
-                        <img src="https://via.placeholder.com/150x100" alt="Картинка сайта Бородинский">
+                        <img src="img/Mask Group (2).png" width="358" height="578" alt="Картинка сайта Бородинский">
                     </p>
                 </a>
                 <p>
@@ -131,7 +135,7 @@
                 <a href="product.html">
                     <h3>Mishka</h3>
                     <p>
-                        <img src="https://via.placeholder.com/150x100" alt="Картинка сайта Мишка">
+                        <img src="img/Mask Group (3).png" width="358" height="578" alt="Картинка сайта Мишка">
                     </p>
                 </a>
                 <p>
@@ -143,7 +147,7 @@
                 <a href="product.html">
                     <h3>A+</h3>
                     <p>
-                        <img src="https://via.placeholder.com/150x100" alt="Картинка сайта A+">
+                        <img src="img/Mask Group (4).png" width="358" height="578" alt="Картинка сайта A+">
                     </p>
                 </a>
                 <p>
@@ -155,7 +159,7 @@
                 <a href="product.html">
                     <h3>Кваст</h3>
                     <p>
-                        <img src="https://via.placeholder.com/150x100" alt="Картинка сайта Кваст">
+                        <img src="img/Mask Group (5).png" width="358" height="578" alt="Картинка сайта Кваст">
                     </p>
                 </a>
                 <p>
@@ -180,26 +184,27 @@
         </ul>
     </main>
     <footer>
-      <section>
-        <div>
-          <h3>NЁRDS DESIGN STUDIO</h3>
-          <p>191186, Санкт-Петербург, <br> ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <img src="https://via.placeholder.com/150x100" alt="Карта с отметкой">
-          <a href="#">напишите нам</a>
-        </div>
-      </section>
-      <h3>Давайте дружить, это выгодно!</h3>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
-      <address>
-        <a href="https://vk.com/htmlacademy"></a>
-        <img src="https://via.placeholder.com/150x100" alt="Картинка Вк">
-        <a href="https://www.facebook.com/HTML-Academy-795303870667279/"></a>
-        <img src="https://via.placeholder.com/150x100" alt="Картинка Фб">
-        <a href="https://www.instagram.com/htmlacademy/?hl=ru"></a>
-        <img src="https://via.placeholder.com/150x100" alt="Картинка Инст">
-      </address>
+        <section>
+            <div>
+                <h3>NЁRDS DESIGN STUDIO</h3>
+                <p>191186, Санкт-Петербург, <br> ул. Б. Конюшенная, д. 19/8</p>
+                <p>тел. +7 (812) 275-75-75</p>
+                <img src="img/map 1.jpg" width="1440" height="416" alt="Карта">
+                <img src="img/map-marker 1.png" width="231" height="190" alt="Отметка на карте">
+                <a href="#">напишите нам</a>
+            </div>
+        </section>
+        <h3>Давайте дружить, это выгодно!</h3>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <address>
+            <a href="https://vk.com/htmlacademy"></a>
+            <img src="img/vk-icon.svg" width="26.01" height="15" alt="Картинка Вк">
+            <a href="https://www.facebook.com/HTML-Academy-795303870667279/"></a>
+            <img src="img/fb-icon.svg" width="12" height="22" alt="Картинка Фб">
+            <a href="https://www.instagram.com/htmlacademy/?hl=ru"></a>
+            <img src="img/insta-icon.svg" width="21" height="21" alt="Картинка Инст">
+        </address>
     </footer>
-  </body>
-  
-  </html>
+</body>
+
+</html>
