--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Нёрдс</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="icon/32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
     <div>
       <a href="#">
-        <img src="https://via.placeholder.com/150x100" alt="Логотип Нёрдс">
+        <img src="img/nerds-logo@2x.svg" width="159.87" height="65.02" alt="Логотип Нёрдс">
       </a>
       <nav>
         <ul>
@@ -31,26 +35,26 @@
         <a href="#">Узнать больше</a>
       </div>
       <div class="slider">
-        <img src="https://via.placeholder.com/150x100" alt="Картинка слайдера">
+        <img src="img/nerds-index-slide1 1.png" width="760" height="413" alt="Картинка слайдера">
       </div>
     </div>
     <section>
       <h3>Возможности</h3>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/150x100" alt="Картинка ноутбука">
+          <img src="img/illustration-1 1.jpg" width="300" height="146" alt="Картинка ноутбука">
           <h3>веб-сайты</h3>
           <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт</p>
           <a href="catalog.html">Заказать</a>
         </li>
         <li>
-          <img src="https://via.placeholder.com/150x100" alt="Картинка телефонов">
+          <img src="img/illustration-2 1.jpg" width="300" height="146" alt="Картинка телефонов">
           <h3>приложения</h3>
           <p>Покорите топ-10 приложений <br> в AppStore и Google Play</p>
           <a href="catalog.html">Заказать</a>
         </li>
         <li>
-          <img src="https://via.placeholder.com/150x100" alt="Доска для презинтаций">
+          <img src="img/illustration-3 1.jpg" width="300" height="146" alt="Доска для презинтаций">
           <h3>презинтация</h3>
           <p>Вы даже не подозреваете, <br> насколько вы изумительны!</p>
           <a href="catalog.html">Заказать</a>
@@ -67,18 +71,18 @@
         <li>Мобильных приложений для iOS и Android</li>
         <li>Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
-      <img src="https://via.placeholder.com/150x100" alt="Нёрдс с точками">
+      <img src="img/nerds-illustration 1.png" width="360" height="208" alt="Нёрдс с точками">
       <p>с 2004 года любим точность во всем:</p>
-      <h3>146%</h3>
+      <h3>146<span>%</span></h3>
       <p>Уровень <br> самоотдачи</p>
-      <h3>100%</h3>
+      <h3>100<span>%</span></h3>
       <p>Соблюдение <br> сроков</p>
-      <h3>50%</h3>
+      <h3>50<span>%</span></h3>
       <p>Минимальная <br> предоплата</p>
-      <img src="https://via.placeholder.com/150x100" alt="html academy">
-      <img src="https://via.placeholder.com/150x100" alt="Borodinski">
-      <img src="https://via.placeholder.com/150x100" alt="Pink">
-      <img src="https://via.placeholder.com/150x100" alt="Mishka">
+      <img src="img/Group 5.svg" width="199" height="67.82" alt="html academy">
+      <img src="img/logo-2 1.png" width="209" height="90" alt="Borodinski">
+      <img src="img/logo-3 1.png" width="185" height="52" alt="Pink">
+      <img src="img/logo-4 1.png" width="173" height="84" alt="Mishka">
     </section>
   </main>
   <footer>
@@ -87,7 +91,8 @@
         <h3>NЁRDS DESIGN STUDIO</h3>
         <p>191186, Санкт-Петербург, <br> ул. Б. Конюшенная, д. 19/8</p>
         <p>тел. +7 (812) 275-75-75</p>
-        <img src="https://via.placeholder.com/150x100" alt="Карта с отметкой">
+        <img src="img/map 1.jpg" width="1440" height="416" alt="Карта">
+        <img src="img/map-marker 1.png" width="231" height="190" alt="Отметка на карте">
         <a href="#">напишите нам</a>
       </div>
     </section>
@@ -95,11 +100,11 @@
     <p>Скидка 10% для друзей из социальных сетей.</p>
     <address>
       <a href="https://vk.com/htmlacademy"></a>
-      <img src="https://via.placeholder.com/150x100" alt="Картинка Вк">
+      <img src="img/vk-icon.svg" width="26.01" height="15" alt="Картинка Вк">
       <a href="https://www.facebook.com/HTML-Academy-795303870667279/"></a>
-      <img src="https://via.placeholder.com/150x100" alt="Картинка Фб">
+      <img src="img/fb-icon.svg" width="12" height="22" alt="Картинка Фб">
       <a href="https://www.instagram.com/htmlacademy/?hl=ru"></a>
-      <img src="https://via.placeholder.com/150x100" alt="Картинка Инст">
+      <img src="img/insta-icon.svg" width="21" height="21" alt="Картинка Инст">
     </address>
   </footer>
 </body>
